# franklin

./: .editorconfig  Cargo.toml  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: 00-new-feature.md  feature_request.md
.github/workflows/: franklin-ci.yml
asserts/: LICENSE.txt  README.md
example/: Cargo.toml
example/src/: main.rs
src/: arg_parser.rs  bin.rs  color_mode.rs  environment.rs  environment_builder.rs  image_reader.rs  job_context.rs  lib.rs
src/crossover/: arithmetic_average_crossover.rs  crossover_function.rs  equal_halfs_crossover.rs  left_or_right_clone_crossover.rs  mod.rs  random_crossover.rs
src/display/: display_condition.rs  mod.rs  window.rs
src/fitness/: absolute_distance.rs  fitness_function.rs  mod.rs  square_distance.rs
src/fs/: image_reader.rs  image_writer.rs  mod.rs  save_condition.rs
src/model/: image.rs  mod.rs  pixel.rs
src/models/: image.rs  mod.rs  pixel.rs
src/mutators/: circle_mutator.rs  mod.rs  mutator.rs  rectangle_mutator.rs  triangle_mutator.rs
src/util/: mod.rs  random.rs
