[package]
name = "franklin"
version = "0.1.0"
edition = "2021"
authors = ["Kamil Rusin"]
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["generic-algorithm", "evolution", "image-generation"]
publish = false

[workspace]
members = ["example"]

[dependencies]
image = "0.24.0"
anyhow = "1.0.53"
show-image = "0.10.1"
