[package]
name = "franklin"
version = "0.1.0"
edition = "2021"
authors = ["Kamil Rusin"]
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["generic-algorithm", "evolution", "image-generation"]
publish = false

[dependencies]
image = "0.24.0"
anyhow = "1.0.53"
show-image = "0.10.1"
rand = "0.8.4"
clap = { version = "3.0.14", features = ["cargo"] }
rayon = "1.5.1"

[lib]
name = "franklin"
path = "src/lib.rs"

[[bin]]
name = "franklin-cli"
path = "src/bin.rs"
