[package]
name = "franklin"
description = "A utility for generating images through evolution."
version = "0.1.3"
edition = "2021"
rust-version = "1.69"
authors = ["Kamil Rusin"]
readme = "README.md"
homepage = "https://github.com/nathiss/franklin"
repository = "https://github.com/nathiss/franklin"
license = "MIT"
keywords = ["generic-algorithm", "evolution", "evolutionary-art", "generation"]
categories = ["command-line-utilities", "simulation"]
include = [
    "/src",
    "./Cargo.toml",
    "./LICENSE.txt",
    "./README.md",
]

[dependencies]
anyhow = "1.0.53"
show-image = "0.13.1"
rand = "0.8.4"
clap = { version = "3.2.25", features = ["cargo"] }
rayon = "1.5.1"
num-integer = "0.1.44"

[dependencies.image]
version = "0.24.0"
default-features = false
features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
]

[lib]
name = "franklin"
path = "src/lib.rs"

[[bin]]
name = "franklin-cli"
path = "src/bin.rs"
